<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/nomelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomelabel" />

    <TextView
        android:id="@+id/nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/nomelabel" />

    <TextView
        android:id="@+id/anolabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nomelabel"
        android:text="@string/anolabel" />

    <TextView
        android:id="@+id/ano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nome"
        android:layout_toRightOf="@+id/anolabel" />

    <TextView
        android:id="@+id/elencoPrincipallabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/anolabel"
        android:text="@string/elencoPrincipallabel" />

    <TextView
        android:id="@+id/elencoPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ano"
        android:layout_toRightOf="@+id/elencoPrincipallabel" />




</RelativeLayout>